// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should only show set view control 1`] = `
<EuiFlexGroup
  alignItems="flexStart"
  className="mapToolbarOverlay"
  direction="column"
  gutterSize="s"
  responsive={false}
>
  <EuiFlexItem>
    <Connect(SetViewControl) />
  </EuiFlexItem>
</EuiFlexGroup>
`;

exports[`Should show all controls 1`] = `
<EuiFlexGroup
  alignItems="flexStart"
  className="mapToolbarOverlay"
  direction="column"
  gutterSize="s"
  responsive={false}
>
  <EuiFlexItem>
    <Connect(SetViewControl) />
  </EuiFlexItem>
  <EuiFlexItem>
    <Connect(FitToData) />
  </EuiFlexItem>
  <EuiFlexItem>
    <Connect(ToolsControl) />
  </EuiFlexItem>
  <EuiFlexItem>
    <Connect(TimesliderToggleButton) />
  </EuiFlexItem>
</EuiFlexGroup>
`;
